# dcdict

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dcdict/: __init__.py  dcdict.py
